配置数据源，tk，通用service接口

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
 
     <properties>
         <java.version>1.8</java.version>
+        <tk.mybatis.version>4.0.3</tk.mybatis.version>
     </properties>
 
     <dependencies>
