--- a/rim-route/src/main/resources/application.properties
+++ b/rim-route/src/main/resources/application.properties
@@ -1,1 +1,14 @@
+logging.level.root=info
+logging.level.cn.rt.route.dao=debug
 
+# 数据源
+spring.datasource.url=jdbc:mysql://47.102.129.138/rim?autoReconnect=true&failOverReadOnly=false&useUnicode=true&characterEncoding=utf-8&useSSL=false&allowMultiQueries=true
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=rt206520
+
+# xml文件
+mybatis.mapperLocations=classpath*:cn.rt.route.dao/xml/*.xml
+
+# web port
+server.port=8081
