--- a/rim-route/src/main/resources/application.properties
+++ b/rim-route/src/main/resources/application.properties
@@ -12,3 +12,7 @@ mybatis.mapperLocations=classpath*:cn.rt.route.dao/xml/*.xml
 
 # web port
 server.port=8081
+
+#¹ú¼Ê»¯ÅäÖÃ
+spring.messages.basename=i18n/messages
+spring.messages.encoding=UTF-8
