--- a/rim-route/src/main/resources/application.properties
+++ b/rim-route/src/main/resources/application.properties
@@ -1,18 +1,18 @@
 logging.level.root=info
 logging.level.cn.rt.route.dao=debug
 
-# Êı¾İÔ´
+# æ•°æ®æº
 spring.datasource.url=jdbc:mysql://47.102.129.138/rim?autoReconnect=true&failOverReadOnly=false&useUnicode=true&characterEncoding=utf-8&useSSL=false&allowMultiQueries=true
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=rt206520
 
-# xmlÎÄ¼ş
+# xmlæ–‡ä»¶æ‰«æ
 mybatis.mapperLocations=classpath*:cn.rt.route.dao/xml/*.xml
 
 # web port
 server.port=8081
 
-#¹ú¼Ê»¯ÅäÖÃ
+#i18né…ç½®
 spring.messages.basename=i18n/messages
 spring.messages.encoding=UTF-8
