--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
     <properties>
         <java.version>1.8</java.version>
         <tk.mybatis.version>4.0.3</tk.mybatis.version>
+        <netty.version>4.1.21.Final</netty.version>
     </properties>
 
     <dependencies>
