添加zk注册和发现

--- a/rim-route/src/main/resources/application.properties
+++ b/rim-route/src/main/resources/application.properties
@@ -16,3 +16,10 @@ server.port=8081
 #i18n配置
 spring.messages.basename=i18n/messages
 spring.messages.encoding=UTF-8
+
+# zk 地址
+app.zk.addr=47.102.129.138:2181
+# zk 连接超时时限
+app.zk.connect.timeout=15000
+# zk 注册根节点
+app.zk.root=/route
