--- a/rim-server/src/main/resources/application.properties
+++ b/rim-server/src/main/resources/application.properties
@@ -3,4 +3,23 @@ server.port=8083
 
 logging.level.root=info
 
+#socket端口
 socket.port=6789
+
+# Redis 配置
+spring.redis.host=47.102.129.138
+spring.redis.port=6379
+spring.redis.jedis.pool.max-active=100
+spring.redis.jedis.pool.max-idle=100
+spring.redis.jedis.pool.max-wait=1000
+spring.redis.jedis.pool.min-idle=10
+spring.redis.password=Rt206520.
+
+# 是否注册 zk
+app.zk.switch=true
+# zk 地址
+app.zk.addr=47.102.129.138:2181
+# zk 连接超时时限
+app.zk.connect.timeout=15000
+# zk 注册根节点
+app.zk.root=/route
