用户注册登录，连接，私人聊天互发消息调通

--- a/rim-route/src/main/resources/application.properties
+++ b/rim-route/src/main/resources/application.properties
@@ -12,10 +12,20 @@ mybatis.mapperLocations=classpath*:cn.rt.route.dao/xml/*.xml
 
 # web port
 server.port=8081
+server.servlet.context-path=/route
 
 #i18n配置
 spring.messages.basename=i18n/messages
 spring.messages.encoding=UTF-8
+
+# Redis 配置
+spring.redis.host=47.102.129.138
+spring.redis.port=6379
+spring.redis.jedis.pool.max-active=100
+spring.redis.jedis.pool.max-idle=100
+spring.redis.jedis.pool.max-wait=1000
+spring.redis.jedis.pool.min-idle=10
+spring.redis.password=Rt206520.
 
 # zk 地址
 app.zk.addr=47.102.129.138:2181
@@ -23,3 +33,5 @@ app.zk.addr=47.102.129.138:2181
 app.zk.connect.timeout=15000
 # zk 注册根节点
 app.zk.root=/route
+
+server.send.interface=/sendMsg
