--- a/rim-route/src/main/resources/application.properties
+++ b/rim-route/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.username=root
 spring.datasource.password=rt206520
 
 # xml文件扫描
-mybatis.mapperLocations=classpath*:cn.rt.route.dao/xml/*.xml
+mybatis.mapperLocations=classpath:cn/rt/route/**/*.xml
 
 # web port
 server.port=8081
