--- a/pom.xml
+++ b/pom.xml
@@ -18,31 +18,20 @@
 
     <modules>
         <module>rim-route</module>
+        <module>rim-server</module>
         <module>rim-common</module>
     </modules>
 
     <properties>
         <java.version>1.8</java.version>
         <tk.mybatis.version>4.0.3</tk.mybatis.version>
-        <netty.version>4.1.21.Final</netty.version>
+        <zkclient.version>0.1</zkclient.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>com.github.sgroschupf</groupId>
-            <artifactId>zkclient</artifactId>
-            <version>0.1</version>
         </dependency>
 
         <dependency>
