重装mysql等服务调整配置

--- a/rim-route/src/main/resources/application.properties
+++ b/rim-route/src/main/resources/application.properties
@@ -1,24 +1,24 @@
 logging.level.root=info
 logging.level.cn.rt.route.dao=debug
 
-# 数据源
-spring.datasource.url=jdbc:mysql://47.102.129.138/rim?autoReconnect=true&failOverReadOnly=false&useUnicode=true&characterEncoding=utf-8&useSSL=false&allowMultiQueries=true
+# \u6570\u636E\u6E90
+spring.datasource.url=jdbc:mysql://47.102.129.138/rim?autoReconnect=true&failOverReadOnly=false&useUnicode=true&characterEncoding=utf-8&useSSL=false&allowMultiQueries=true&allowPublicKeyRetrieval=true
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=rt206520
+spring.datasource.password=Rt206520
 
-# xml文件扫描
+# xml\u6587\u4EF6\u626B\u63CF
 mybatis.mapperLocations=classpath:cn/rt/route/**/*.xml
 
 # web port
 server.port=8081
 server.servlet.context-path=/route
 
-#i18n配置
+#i18n\u914D\u7F6E
 spring.messages.basename=i18n/messages
 spring.messages.encoding=UTF-8
 
-# Redis 配置
+# Redis \u914D\u7F6E
 spring.redis.host=47.102.129.138
 spring.redis.port=6379
 spring.redis.jedis.pool.max-active=100
@@ -27,11 +27,11 @@ spring.redis.jedis.pool.max-wait=1000
 spring.redis.jedis.pool.min-idle=10
 spring.redis.password=Rt206520.
 
-# zk 地址
-app.zk.addr=47.102.129.138:2181
-# zk 连接超时时限
+# zk \u5730\u5740
+app.zk.addr=101.132.66.50:2181
+# zk \u8FDE\u63A5\u8D85\u65F6\u65F6\u9650
 app.zk.connect.timeout=15000
-# zk 注册根节点
+# zk \u6CE8\u518C\u6839\u8282\u70B9
 app.zk.root=/route
 
 server.send.interface=/sendMsg
