--- a/rim-server/src/main/resources/application.properties
+++ b/rim-server/src/main/resources/application.properties
@@ -3,11 +3,11 @@ server.port=8083
 
 logging.level.root=info
 
-#socket端口
+#socket\u7AEF\u53E3
 socket.port=6789
 
-# Redis 配置
-spring.redis.host=47.102.129.138
+# Redis \u914D\u7F6E
+spring.redis.host=101.132.66.50
 spring.redis.port=6379
 spring.redis.jedis.pool.max-active=100
 spring.redis.jedis.pool.max-idle=100
@@ -15,11 +15,11 @@ spring.redis.jedis.pool.max-wait=1000
 spring.redis.jedis.pool.min-idle=10
 spring.redis.password=Rt206520.
 
-# 是否注册 zk
+# \u662F\u5426\u6CE8\u518C zk
 app.zk.switch=true
-# zk 地址
-app.zk.addr=47.102.129.138:2181
-# zk 连接超时时限
+# zk \u5730\u5740
+app.zk.addr=101.132.66.50:2181
+# zk \u8FDE\u63A5\u8D85\u65F6\u65F6\u9650
 app.zk.connect.timeout=15000
-# zk 注册根节点
+# zk \u6CE8\u518C\u6839\u8282\u70B9
 app.zk.root=/route
