--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
         <java.version>1.8</java.version>
         <tk.mybatis.version>4.0.3</tk.mybatis.version>
         <zkclient.version>0.1</zkclient.version>
+        <fastjson.version>1.2.31</fastjson.version>
     </properties>
 
     <dependencies>
