--- a/rim-route/src/main/resources/application.properties
+++ b/rim-route/src/main/resources/application.properties
@@ -2,8 +2,8 @@ logging.level.root=info
 logging.level.cn.rt.route.dao=debug
 
 # \u6570\u636E\u6E90
-spring.datasource.url=jdbc:mysql://47.102.129.138/rim?autoReconnect=true&failOverReadOnly=false&useUnicode=true&characterEncoding=utf-8&useSSL=false&allowMultiQueries=true&allowPublicKeyRetrieval=true
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://101.132.66.50/rim?autoReconnect=true&failOverReadOnly=false&useUnicode=true&characterEncoding=utf-8&useSSL=false&allowMultiQueries=true&allowPublicKeyRetrieval=true
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=Rt206520
 
@@ -19,7 +19,7 @@ spring.messages.basename=i18n/messages
 spring.messages.encoding=UTF-8
 
 # Redis \u914D\u7F6E
-spring.redis.host=47.102.129.138
+spring.redis.host=101.132.66.50
 spring.redis.port=6379
 spring.redis.jedis.pool.max-active=100
 spring.redis.jedis.pool.max-idle=100
