客户端登录、连接server

--- a/rim-common/pom.xml
+++ b/rim-common/pom.xml
@@ -21,6 +21,18 @@
             <artifactId>mapper</artifactId>
             <version>${tk.mybatis.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>${fastjson.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>${netty.version}</version>
+        </dependency>
     </dependencies>
 
 </project>
